// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can create a policy for a labeled pod 1`] = `
Array [
  Object {
    "apiVersion": "networking.k8s.io/v1",
    "kind": "NetworkPolicy",
    "metadata": Object {
      "name": "test-policy-c89ef47f",
    },
    "spec": Object {
      "podSelector": Object {
        "matchExpressions": Array [
          Object {
            "key": "app",
            "operator": "In",
            "values": Array [
              "web",
            ],
          },
        ],
      },
    },
  },
]
`;

exports[`can create a policy for a managed pod 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Pod",
    "metadata": Object {
      "labels": Object {
        "cdk8s.io/metadata.addr": "test-Web-c8b65d84",
      },
      "name": "test-web-c854d28f",
    },
    "spec": Object {
      "automountServiceAccountToken": true,
      "containers": Array [
        Object {
          "env": Array [],
          "image": "web",
          "imagePullPolicy": "Always",
          "name": "main",
          "ports": Array [],
          "securityContext": Object {
            "privileged": false,
            "readOnlyRootFilesystem": false,
            "runAsNonRoot": false,
          },
          "volumeMounts": Array [],
        },
      ],
      "dnsConfig": Object {
        "nameservers": Array [],
        "options": Array [],
        "searches": Array [],
      },
      "dnsPolicy": "ClusterFirst",
      "hostAliases": Array [],
      "initContainers": Array [],
      "securityContext": Object {
        "fsGroupChangePolicy": "Always",
        "runAsNonRoot": false,
        "sysctls": Array [],
      },
      "setHostnameAsFQDN": false,
      "volumes": Array [],
    },
  },
  Object {
    "apiVersion": "networking.k8s.io/v1",
    "kind": "NetworkPolicy",
    "metadata": Object {
      "name": "test-policy-c89ef47f",
    },
    "spec": Object {
      "podSelector": Object {
        "matchExpressions": Array [
          Object {
            "key": "cdk8s.io/metadata.addr",
            "operator": "In",
            "values": Array [
              "test-Web-c8b65d84",
            ],
          },
        ],
      },
    },
  },
]
`;

exports[`can create a policy for all pods 1`] = `
Array [
  Object {
    "apiVersion": "networking.k8s.io/v1",
    "kind": "NetworkPolicy",
    "metadata": Object {
      "name": "test-policy-c89ef47f",
    },
    "spec": Object {
      "podSelector": Object {},
    },
  },
]
`;
